5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1646_2450.log
== TEST (2019-04-16 10:50:28) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")
a = a.upper()
b = b.upper()
print(a)
print(b)
-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:56:05) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")
a = a.
b = b.upper()

if(a.upper() >= b.upper()):
	print(b " "+ a)

else:
	print(a " "+ b)
-- ERROR:
File "XXXX", line 4
    a = a.
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:56:25) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")

if(a.upper() >= b.upper()):
	print(b " "+ a)

else:
	print(a " "+ b)
-- ERROR:
File "XXXX", line 6
    print(b " "+ a)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:56:36) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")

if(a.upper() >= b.upper()):
	print(b + a)

else:
	print(a + b)
-- OUTPUT:
AdaLeon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:57:52) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")
a = a.upper()
b = b.upper()
if(a >= b):
	print(b + a)

else:
	print(a + b)
-- OUTPUT:
ADALEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:58:39) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")
a = a.upper()
b = b.upper()
if(a >= b):
	print(b + a)

else:
	print(a + b)
-- OUTPUT:
ADALEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:59:38) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")
a = a.upper()
b = b.upper()
if(a >= b):
	print(b " " + a)

else:
	print(a " "+ b)
-- ERROR:
File "XXXX", line 7
    print(b " " + a)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:00:34) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")
a = a.upper()
b = b.upper()

if(a >= b):
	print(b, a)

else:
	print(a, b)
-- OUTPUT:
ADA LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:00:47) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")
a = a.upper()
b = b.upper()

if(a >= b):
	print(b, a)

else:
	print(a, b)
-- EXECUTION TIME:
0.18753
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:01:33) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")

if(a.upper() >= b.upper()):
	print(b, a)

else:
	print(a, b)
-- OUTPUT:
Ada Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:01:56) 
-- CODE:
#Leitura dos nomes
a = input("digite o primeiro nome: ")
b = input("digite o segundo nome: ")

if(a.upper() >= b.upper()):
	print(b, a)

else:
	print(a, b)
-- EXECUTION TIME:
0.171608
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
